B&L QA/objects/Credit_Analyst__c.object
<CustomObject>
    <description>Contains contact information for the Credit Analysts.  Used by NACSS.</description>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Network ID for Credit Analyst as kept in PSFT</description>
        <externalId>true</externalId>
        <label>Username</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Credit Analyst</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Username__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Username__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Credit Analyst Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Analysts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>